parseHTMLInteger shouldn't upconvert 8-bit string https://bugs.webkit.org/show_bug.cgi?id=118629

Reviewed by Sam Weinig.

Merge https://chromium.googlesource.com/chromium/blink/+/e0ebab23e0c16b49dc90c9c39b8bbbf4f243a01e.

* html/parser/HTMLParserIdioms.cpp:
(WebCore::parseHTMLInteger):


Canonical link: https://commits.webkit.org/136546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152610 268f45cc-cd09-0410-ab3c-d52691b4dbfc